bug_fix: some kanban views of the odoo backend is showing scrollbar

--- a/custom/themes/backend_theme_manon/static/src/scss/manon_theme.scss
+++ b/custom/themes/backend_theme_manon/static/src/scss/manon_theme.scss
@@ -521,12 +521,18 @@ $header-padding: 12px;
     .oe_kanban_global_area, .oe_kanban_card {
         box-shadow: 0px 2px 4px 1px #d9d9d9;
         padding: 6px !important;
-        margin: 8px !important;
+        margin: 8px;
         transition: all .3s;
         &:hover {
             box-shadow: 0px 2px 8px #d9d9d9;
             transform: scale(1.05);
         }
+    }
+}
+
+@media (max-width: 767px) {
+    .o_kanban_view.o_kanban_grouped[class] .o_kanban_group:not(.o_column_folded) {
+        padding: 8px;
     }
 }
 
